# TIL

./: README.md
HTML5+CSS3/: index.html
HTML5+CSS3/css/: stylesheet.css
JavaScript/review/: Day01.README.md  Day02.README.md  Day03.README.md  Day04.README.md  Day05.README.md  Day1.README.md  README.md
JavaScript/review/Homework_Ex1/: exercise1-1.js  exercise1-10.js  exercise1-11.js  exercise1-12.js  exercise1-13.js  exercise1-14.js  exercise1-15.js  exercise1-16.js  exercise1-2.js  exercise1-3.js  exercise1-4.js  exercise1-5.js  exercise1-6.js  exercise1-7.js  exercise1-8.js  exercise1-9.js
django/review/community2/: db.sqlite3
django/review/community3/: db.sqlite3
django/review/web_scraping/: naver_movie.py  naver_movie_IO.py  naver_movie_dictIO.py  reviews.csv  reviews.txt
python/review/: Day 11. review.ipynb  Day 6. review.ipynb  Day 7. review.ipynb  Day 9. review.ipynb  README.md
python/review/flask-review/: server.py
python/review/scrape-review/: Day 11.review(scrape).ipynb  pyproject.toml
python/review/scrape-review/.ipynb_checkpoints/: Homework.0217(scrape)-checkpoint.ipynb
python/review/socket-review/: sock-client.py
review/: Day 10. review.ipynb  Day 2. review.ipynb  Day 3.  review.ipynb  Day 4. review.ipynb  Day 5. review.ipynb  Day 8. review.ipynb  Day 9. review.ipynb  Homework.0202(csv->json).ipynb
review/module-review/: main.py  pyproject.toml
review/module-review/fibo/: rec.py
review/socket-review/: sock-server.py
test/: Test_01(string operator).ipynb  Test_02(for, if).ipynb  Test_03(function).ipynb  Test_04(python).ipynb
(+58 files in other folders)
