[tool.poetry]
name = "module-practice-1"
version = "0.1.0"
description = ""
authors = ["Oderystella <ddott59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Django = "1.11"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
